# owl-wms

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml  requirements.txt  train.py
configs/: 360p.yml  360p_v2.yml  av.yml  basic.yml  causvid.yml  shortcut.yml  shortcut_2.yml
configs/owl_vaes/: 128x_cod_stage2.yml  cod_128x.yml  cod_audio.yml
inference/: av_pipeline.py
owl_wms/: configs.py  muon.py  schedulers.py
owl_wms/data/: __init__.py  local_cod_data.py  local_cod_latent.py  s3_cod_latent.py  s3_cod_latent_audio.py
owl_wms/models/: __init__.py  gamerft.py  gamerft_audio.py  gamerft_shortcut.py  gamerft_shortcut_audio.py  gamerft_shortcut_simple.py
owl_wms/nn/: attn.py  embeddings.py  kv_cache.py  mlp.py  mmattn.py  modulation.py  normalization.py  rope.py
owl_wms/sampling/: __init__.py  av_window.py  cfg.py  shortcut_sampler.py  simple.py  window.py
owl_wms/trainers/: __init__.py  av_trainer.py  base.py  causvid.py  gamerft_trainer.py  shortcut_trainer.py  shortcut_trainer_2.py  shortcut_trainer_audio.py
owl_wms/utils/: __init__.py  ddp.py  logging.py  owl_vae_bridge.py  vis.py
profiling/: README.md  generic_forward.py  inductor_compile.py  inductor_options.md  profiler.py  tensorrt_compile.py  timing.py
